# animatron

./: Cargo.toml  README.md
animatron/: Cargo.toml  README.md
animatron/src/: lib.rs  traits.rs
animatron_derive/: Cargo.toml  README.md
