[package]
name = "animatron"
version = "0.2.0"
edition = "2021"
authors = ["Tauseef Khan", "Tauseef Khan <tauseef25@gmail.com>"]
description = "Animation state management."
repository = "https://github.com/tauseefk/animatron"
license = "MIT"
keywords = ["gamedev", "spritesheet", "animation"]

include = [
  "**/*.rs",
  "Cargo.toml",
]
