[package]
name = "animatron_derive"
version = "0.2.1"
edition = "2021"
authors = ["Tauseef Khan", "Tauseef Khan <tauseef25@gmail.com>"]
description = "Animatron derive macros."
repository = "https://github.com/tauseefk/animatron"
license = "MIT"
keywords = ["gamedev", "spritesheet", "animation"]

include = [
  "**/*.rs",
  "Cargo.toml",
]

[lib]
name = "animatron_derive"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
